<resources>
    <string name="app_name">Agro Health</string>
    <string name="your_password">Your Password</string>
    <string name="your_email">Your Email</string>
    <string name="login">Login</string>
    <string name="new_user">New User</string>
    <string name="sign_up">Sign Up</string>
    <string name="your_username">Your username</string>
    <string name="process_image_description">We are currently detecting the image you uploaded</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="whats_happening">Whats happening?</string>
    <string name="post">POST</string>
    <string name="try_again">Try Again</string>
    <string name="login_as_guest">Login as guest</string>
    <string name="unfortunately_you_can_t_access_this_feature_yet_because_you_haven_t_logged_in">Unfortunately, you can\'t access this feature yet because you haven\'t logged in</string>
    <string name="solution">Solution</string>
    <string name="unfortunately_you_can_t_access_this_feature_because_you_don_t_allow_the_camera">Unfortunately, you can\'t access this feature because you don\'t allow the camera</string>
    <string name="allow_camera">Allow Camera</string>

    <string-array name="category_id">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="category_name">
        <item>Pengenalan</item>
        <item>Bisnis</item>
        <item>Praktik</item>
        <item>Sejarah</item>
    </string-array>
</resources>