<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_login_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView_login_header"
            android:layout_width="match_parent"
            android:layout_height="167dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/background_auth_header" />

        <ImageView
            android:id="@+id/imageView_login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/imageView_login_header"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/imageView_login_header"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/constraintLayout_login_content"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/constraintLayout_login_header"
       app:layout_constraintBottom_toTopOf="@id/constraintLayout_login_footer">

       <ImageView
           android:id="@+id/imageView_login_logoText"
           android:layout_width="200dp"
           android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:scaleType="centerCrop"
           app:srcCompat="@drawable/text_logo" />

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/textInputLayout_login_email"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:helperTextTextColor="@color/red"
           android:layout_marginStart="32dp"
           android:layout_marginEnd="32dp"
           android:hint="@string/your_email"
           android:layout_marginTop="10dp"
           android:textColorHint="@color/gray"
           app:boxCornerRadiusBottomEnd="20dp"
           app:boxCornerRadiusBottomStart="20dp"
           app:boxCornerRadiusTopEnd="20dp"
           app:boxCornerRadiusTopStart="20dp"
           app:boxStrokeColor="@color/green"
           app:hintTextColor="@color/green"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/imageView_login_logoText"
           app:endIconMode="custom"
           app:endIconDrawable="@drawable/email"
           app:endIconTint="@color/transparent"
           app:endIconTintMode="screen"
           >

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/textInputEditText_login_email"
               android:layout_width="match_parent"
               android:layout_height="60dp"
               android:inputType="textEmailAddress"
               app:layout_constraintTop_toBottomOf="@+id/textView"
               tools:layout_editor_absoluteX="-6dp" />


       </com.google.android.material.textfield.TextInputLayout>


       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/textInputLayout_login_password"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:helperTextTextColor="@color/red"
           android:layout_marginStart="32dp"
           android:layout_marginEnd="32dp"
           android:hint="@string/your_password"
           android:textColorHint="@color/gray"
           app:boxCornerRadiusBottomEnd="20dp"
           app:boxCornerRadiusBottomStart="20dp"
           app:boxCornerRadiusTopEnd="20dp"
           app:boxCornerRadiusTopStart="20dp"
           app:boxStrokeColor="@color/green"
           app:hintTextColor="@color/green"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout_login_email"
           android:layout_marginTop="10dp"
           app:endIconMode="custom"
           app:endIconDrawable="@drawable/padlock"
           app:endIconTint="@color/transparent"
           app:endIconTintMode="screen">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/textInputEditText_login_password"
               android:layout_width="match_parent"
               android:layout_height="60dp"
               android:inputType="textPassword"
               app:layout_constraintTop_toBottomOf="@+id/textView"
               tools:layout_editor_absoluteX="-6dp" />

       </com.google.android.material.textfield.TextInputLayout>

       <Button
           android:id="@+id/button_login_arrow"
           android:layout_width="73dp"
           android:layout_height="80dp"
           android:layout_marginTop="40dp"
           android:backgroundTint="@color/button_primary_color"
           android:contentDescription="@string/login"
           android:drawableLeft="@drawable/ic_arrow_forward"
           android:drawableTint="@color/white"
           android:textColor="#FFF"
           app:iconPadding="20dp"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout_login_password"
           app:layout_constraintVertical_bias="0.0" />


   </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_login_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imageView_login_bottom"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/background_auth_footer" />

        <TextView
            android:id="@+id/textView_login_newUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="36dp"
            android:text="@string/new_user"
            android:textColor="@color/brown"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView_login_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/sign_up"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_login_newUser"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar_login_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>